--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,11 +1,5 @@
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
@@ -14,30 +8,28 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
+
     gzip on;
-    gzip_types text/plain text/css application/javascript application/json;
-    gzip_min_length 1024;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
 
     server {
         listen       80;
-        server_name  _;
+        server_name  localhost;
 
         root   /usr/share/nginx/html;
-        index  index.html;
 
-        # Serve HTML and fallback to index.html for SPAs
+        index  index.html index.htm;
+
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        # Serve static assets with long-term caching
-        location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
-            expires 30d;
-            add_header Cache-Control "public";
-            try_files $uri =404;
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
         }
-
-        # Disable access logging for static files (optional)
-        access_log off;
     }
 }
