--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run linter
 
-        run: dotnet format --verify-no-changes --verbosity diagnostic
+        run: dotnet format ./ChatSystem.sln --verify-no-changes --verbosity diagnostic
 
   test:
     name: Unit & Integration Testing
