--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,14 +47,14 @@ jobs:
 
       - name: Build and start services
         run: |
-          docker-compose build
-          docker-compose up -d
+          docker compose build
+          docker compose up -d
 
       - name: Wait for services to be healthy
         run: sleep 15
 
       - name: Check running containers
-        run: docker-compose ps
+        run: docker compose ps
 
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
@@ -86,4 +86,4 @@ jobs:
 
       - name: Tear down services
         if: always()
-        run: docker-compose down
+        run: docker compose down
