--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Create .env file
         run: |
+          echo "POSTGRES_USER=my_pg_user" >> .env
           echo "POSTGRES_PASSWORD=my_pg_password" >> .env
           echo "POSTGRES_DB=my_pg_db" >> .env
           echo "MONGO_USER=my_mongo_admin" >> .env
