--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,13 +77,13 @@ jobs:
       - name: Wait for databases to be healthy
         run: |
           echo "Waiting for postgres_db to become healthy..."
-          until [ "$(docker inspect -f '{{.State.Health.Status}}' postgres_db 2>/dev/null)" == "healthy" ]; do
+          until [ "$(docker inspect -f '{{.State.Health.Status}}' chatsystem-postgres_db-1 2>/dev/null)" == "healthy" ]; do
               sleep 2
           done
           echo "postgres_db is healthy!"
 
           echo "Waiting for mongo_db to become healthy..."
-          until [ "$(docker inspect -f '{{.State.Health.Status}}' mongo_db 2>/dev/null)" == "healthy" ]; do
+          until [ "$(docker inspect -f '{{.State.Health.Status}}' chatsystem-mongo_db-1 2>/dev/null)" == "healthy" ]; do
               sleep 2
           done
           echo "mongo_db is healthy!"
