--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@
 
 on:
   push:
-    branches: [master]
+    branches: [ master, dev ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
@@ -41,6 +43,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -77,13 +81,17 @@ jobs:
       - name: Wait for databases to be healthy
         run: |
           echo "Waiting for postgres_db to become healthy..."
-          until [ "$(docker inspect -f '{{.State.Health.Status}}' chatsystem-postgres_db-1 2>/dev/null)" == "healthy" ]; do
+          # Note: The container name might vary slightly. 'docker compose ps' helps verify it.
+          # This command is robust and finds the container with 'postgres_db' in its name.
+          until [ "$(docker inspect -f '{{.State.Health.Status}}' $(docker ps -q --filter name=postgres_db) 2>/dev/null)" == "healthy" ]; do
+              echo -n "."
               sleep 2
           done
           echo "postgres_db is healthy!"
 
           echo "Waiting for mongo_db to become healthy..."
-          until [ "$(docker inspect -f '{{.State.Health.Status}}' chatsystem-mongo_db-1 2>/dev/null)" == "healthy" ]; do
+          until [ "$(docker inspect -f '{{.State.Health.Status}}' $(docker ps -q --filter name=mongo_db) 2>/dev/null)" == "healthy" ]; do
+              echo -n "."
               sleep 2
           done
           echo "mongo_db is healthy!"
