docs: Add XML documentation comments for various DTOs and controllers

--- a/ChatService/ChatService.csproj
+++ b/ChatService/ChatService.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>2c21c032-3b4a-42dc-b2df-dfb1fb1820c9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
