--- a/ChatService/Dockerfile
+++ b/ChatService/Dockerfile
@@ -10,19 +10,16 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-
-RUN apt-get update && apt-get install -y libssl-dev && rm -rf /var/lib/apt/lists/*
-
 COPY ["ChatService/ChatService.csproj", "ChatService/"]
 RUN dotnet restore "./ChatService/ChatService.csproj"
 COPY . .
 WORKDIR "/src/ChatService"
-RUN dotnet build "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/build /p:VsxmdEnabled=false
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false /p:VsxmdEnabled=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
