--- a/ChatService/Dockerfile
+++ b/ChatService/Dockerfile
@@ -14,12 +14,12 @@ COPY ["ChatService/ChatService.csproj", "ChatService/"]
 RUN dotnet restore "./ChatService/ChatService.csproj"
 COPY . .
 WORKDIR "/src/ChatService"
-RUN dotnet build "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/build /p:VsxmdEnabled=false
+RUN dotnet build "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false /p:VsxmdEnabled=false
+RUN dotnet publish "./ChatService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
