--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,13 +75,8 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore ./ChatSystem.sln
         
-      - name: Install OpenSSL dependency
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl1.1
-          
-      - name: Build solution
-        run: dotnet build ./ChatSystem.sln --no-restore --configuration Release
+      - name: Build solution (skip docs)
+        run: dotnet build ./ChatSystem.sln --no-restore --configuration Release /p:GenerateDocumentationFile=false
 
       - name: Wait for databases to be healthy
         run: |
