--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -18,13 +18,54 @@ http {
     server {
         listen       80;
         server_name  localhost;
-
         root   /usr/share/nginx/html;
-
         index  index.html index.htm;
 
+        # Serve static files and frontend routes
         location / {
             try_files $uri $uri/ /index.html;
+        }
+
+        # Proxy API requests for UserAccountService
+        location /api/useraccount/ {
+            rewrite ^/api/useraccount/(.*)$ /api/$1 break;
+            proxy_pass http://user_account_service:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy API requests for ChatService
+        location /api/chat/ {
+            rewrite ^/api/chat/(.*)$ /api/$1 break;
+            proxy_pass http://chat_service:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy SignalR requests for FriendshipHub
+        location /friendshiphub {
+            proxy_pass http://user_account_service:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 120s; # Keep connection open
+        }
+
+        # Proxy SignalR requests for ChatHub
+        location /chathub {
+            proxy_pass http://chat_service:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 120s; # Keep connection open
         }
 
         error_page   500 502 503 504  /50x.html;
